Fix orbital mechanics and display issues: Add collision detection, fix orbital velocity calculation, update perigee/apogee display

--- a/index.html
+++ b/index.html
@@ -49,6 +49,7 @@
     </script>
     
     <!-- Import our scripts -->
+    <script src="js/scaleManager.js"></script>
     <script src="js/planet.js"></script>
     <script src="js/spacecraft.js"></script>
     <script src="js/scene.js"></script>
