--- a/index.html
+++ b/index.html
@@ -52,6 +52,7 @@
     <script src="js/scaleManager.js"></script>
     <script src="js/planet.js"></script>
     <script src="js/spacecraft.js"></script>
+    <script src="js/physics.js"></script>
     <script src="js/scene.js"></script>
     <script src="js/main.js"></script>
 </body>
